cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_335.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bio/b_sock.c:301: error: DEAD_STORE
  The value written to &l (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bio/b_sock.c:301:5: Write of unused value
299.       int l;
300.   
301.       l = mode;
           ^
302.   # ifdef FIONBIO
303.       l = mode;
